# document-intelligence-refinery

./: .gitignore  README.md  pyproject.toml
.refinery/: extraction_ledger.jsonl
.refinery/profiles/: 2013-E.C-Assigned-regular-budget-and-expense.json  2013-E.C-Audit-finding-information.json  2013-E.C-Procurement-information.json  2018_Audited_Financial_Statement_Report.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.json  2019_Audited_Financial_Statement_Report.json  Annual_Report_JUNE-2017.json  CBE Annual Report 2016-17.json  Company_Profile_2024_25.json  Consumer Price Index August 2025.json  Consumer Price Index July 2025.json
docs/: DOMAIN_NOTES.md
rubric/: extraction_rules.yaml
src/: __init__.py
src/agents/: chunker.py  extractor.py  indexer.py  query_agent.py  router.py  tools.py  triage.py
src/extractors/: __init__.py  fast.py  layout.py  vision.py
src/models/: extraction.py  ldu.py  page_index.py  profiles.py  provenance.py  query.py
src/strategies/: __init__.py  fast.py  layout.py  vision.py
tests/: test_triage.py
